@@ -31,6 +31,8 @@ JDO:    Improved support for BLOB and CLOB values. Now you can get them as
         java.io.InputStream and java.sql.Clob, respectively, see "types.html"
 	for details (oleg). 
 
+JDO:    Solved problem of NULL dirty checking with Oracle (oleg).          
+
 
 Version 0.8.11 December, 15 2000
 --------------------------------
